Fix flyover covering header issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,9 +5,9 @@
   overflow: hidden;
 
   ccf-image-viewer-popover {
-    position: fixed;
     overflow: hidden;
     left: 100%;
+    top: 1.5rem;
     z-index: 10;
   }
 
